--- a/testing/mcu-testing.tex
+++ b/testing/mcu-testing.tex
@@ -161,22 +161,31 @@ tests related to use of the CC3220 to support application of the product. The
 programming developed and test the below criteria is intended to be the
 product software build.
 
-\paragraph{Startup} Upon startup, the system shall initialize the watchdog
-timer, GPIO, ADC, network stack/WiFi module.
+\paragraph{Startup} Upon startup, the system shall initialize these peripherals in the following order within 30 seconds of startup: watchdog timer, GPIO, ADC, network stack/WiFi module. The system shall then check for interrupts, and execute ISRs if necessary. The system shall then verify its connection to the internet, if set, by attempting to ping \texttt{8.8.8.8} and \texttt{8.8.4.4} 16 at most times over the period of 8 seconds. If 4/16 responses have been received at any point, the system shall attempt to verify network DNS status by pinging \texttt{google.com} 16 at most times over the period of 8 seconds. If 4/16 responses have been received, the system shall continue with startup and clear the no connection flag (if set). If no connection has been established (i.e. the system fails to ping the aforementioned addresses at either step), the system shall set a flag to indicate no connection has been received, and reset. If no connection has been established, and the flag is set, the system shall go into critical power mode and flash the yellow LED for 1 second, 1 time every 2 seconds. The user shall be able to correct the issue via user interface (e.g. SmartConfig or other developed interface). The system shall measure the battery voltage, and set itself to the appropriate state described earlier.
 
-Check for interrupts.
+\paragraph{Shutdown} The system shall generate an interrupt to shutdown the system. The shutdown ISR shall run and perform the aforementioned actions. The system shall finish any RF transmissions within 5 seconds. The system shall terminate all remaining RF transmissions after the 5 second window has elapsed. The system shall save any network parameters to nonvolatile memory to be used upon startup within 1 second. The system shall safely shutdown any initialized peripherals within 5 seconds. The system shall safely shutdown any sensing components within 5 seconds. The system shall "hand-off" any control it had over the power subsystem to the battery's charge controller within 5 seconds. The system shall go into the shutdown power mode, stopping the processor within 1 second.
 
+\paragraph{Reset} In the event of a reset state, the system shall perform the shutdown ISR, with each section of the ISR performing its necessary tasks within the allotted time mentioned above. The system shall perform its startup ISR, with each section of the ISR performing its necessary tasks within the allotted time mentioned above. There shall be a time period of no longer than 5 seconds between the end of the shutdown ISR and the beginning of the startup ISR.
 
+\paragraph{Networking} The system shall be able to connect to the user's WLAN if it meets the following standards:
+\begin{itemize}
+    \item A 2.4 GHz-based wireless network
+    \item Contains no security or is secured with WPA2 (Personal or Enterprise)
+    \item $\geq$-70 dBm signal strength
+    \item Adheres to the standards of 802.11b, g, or n
+\end{itemize}
+The system shall received an IPv4 address assigned by network DHCP, or the user shall be able to statically assign a local IPv4 address. The network shall use NAT, and not expose the product to the WAN. The system shall use DNS provided by the WLAN gateway. The system shall be able to connect to the internet within the timeframe described by the startup sequence. The system shall be ready to establish a connection to AWS within 5 seconds of verifying connection to the internet.
 
-\paragraph{Shutdown}
-\paragraph{Reset}
-\paragraph{Networking}
-\paragraph{Internet}
-\paragraph{AWS}
-\paragraph{Receive (Sockets)}
-\paragraph{Send (Sockets)}
-\paragraph{Receive (Command)}
-\paragraph{Send (Data)}
-\paragraph{Solar and Battery}
-\paragraph{Sensing}
-\paragraph{ISRs} % Power modes
+\paragraph{AWS} The system shall first establish a connection to AWS by sending a burst of 5 data packets of the size and containing the variables  described in \autoref{toweb_encoding}. over a period of 25 seconds. If no connection is established over a period of 15 minutes, the system shall send the same burst of data packets and repeat every 15 minutes until a connection is established.
+
+\paragraph{Receive (Sockets)} The system shall listen for commands from AWS via TCP sockets. If no traffic is received from AWS within a period of 40 minutes, the system shall terminate and attempt to reopen the socket. The system must be able to open and configure a socket within 30 seconds.
+
+\paragraph{Send (Sockets)} The system shall send data to AWS via TCP sockets. If no traffic is successfully sent to AWS within a period of 40 minutes, the system shall terminate and attempt to reopen the socket. The system must be able to open and configure a socket within 30 seconds.
+
+\paragraph{Receive (Command)} While a connection is established with AWS, the system shall continually listen for commands from AWS. The system shall be able to fully receive and decode commands from AWS within 10 seconds of the start of the reception. The system shall be allotted 1 second per command to schedule the received commands.
+
+\paragraph{Send (Data)} While a connection is currently established with AWS, the system shall send a burst of 2 data packets over a period of 10 seconds every 15 minutes. The data packets shall be of the size and contain the variables described in \autoref{toweb_encoding}.
+
+\paragraph{Solar and Battery} The system shall monitor and update the solar array current and voltage output values at least every 10 seconds. The system shall run in active mode between sunrise and sunset, while the battery has 40-100\% calculated charge remaining. The system shall run in low power mode between sunrise and sunset while the battery has 10-40\% calculated charge remaining, and between sunset and sunrise while the battery has 10-100\% calculated charge remaining. The system shall run in critical power mode while the battery has 5-10\% calculated charge remaining. The system shall be in shutdown mode while the battery has 0-5\% calculated charge remaining. The system shall be able to switch power modes within 5 seconds of the interrupt being triggered.
+
+\paragraph{Sensing} The system shall monitor and perform analog-to-digital conversion on the spectroscopic sensor values at least every 10 seconds while not in shutdown or critical power mode.
