--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -9,6 +9,7 @@
 \usepackage{hyperref}
 \usepackage{tabu}
 \usepackage{upgreek}
+\usepackage{multirow}
 \hypersetup{
     colorlinks=true,
     linkcolor=black,
