--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -1,6 +1,10 @@
 \subsection{Power Subsystem}
+The block diagram in \autoref{fig:power-block-diagram} shows the flow of power through the system. 
 \begin{figure}[H]
     \centering
     \caption{Power subsystem block diagram}
     \includegraphics[width=\textwidth]{images/PowerSystemBlock.png}
+    \label{fig:power-block-diagram}
 \end{figure}
+The block labeled ``Mechanics'' in \autoref{fig:power-block-diagram} refers to the solenoid valve for controlling water flow as well as the control scheme for actuating the solar panels to maximize power efficiency.
+\subsubsection{Solar Panel Control}
